12-kuber/8-kuber_config/task1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-configmap-deployment
  labels:
    app: nginx-configmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-configmap
  template:
    metadata:
      labels:
        app: nginx-configmap
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
      volumes:
      - name: index-volume
        configMap:
          name: nginx-index-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - name: nginx-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-configmap

---
apiVersion: v1
kind: Pod
metadata:
  name: external-multitool
spec:
  containers:
  - image: wbitt/network-multitool
    imagePullPolicy: IfNotPresent
    name: external-multitool
